--- a/Palindrome-Checker/palindrome.html
+++ b/Palindrome-Checker/palindrome.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="styles.css" />
+    <link rel="stylesheet" href="palindrome.css" />
     <title>Palindrome</title>
   </head>
   <body>
@@ -24,6 +24,6 @@
     </div>
     
     </main>
-    <script src="./script.js"></script>
+    <script src="./palindrome.js"></script>
   </body>
 </html>
