--- a/Roman-Converter/roman-converter.html
+++ b/Roman-Converter/roman-converter.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Roman Numeral Converter</title>
-    <link rel="stylesheet" href="styles.css" />
+    <link rel="stylesheet" href="roman-converter.css" />
   </head>
   <main>
   <body>
@@ -18,7 +18,7 @@
      <fieldset>
     </form>
     <div id="output" class="output"></div>
-    <script src="script.js"></script>
+    <script src="roman-converter.js"></script>
   </body>
   </main>
 </html>
