--- a/Roman-Converter/roman-converter.html
+++ b/Roman-Converter/roman-converter.html
@@ -31,7 +31,7 @@
           <button type="button" id="convert-btn">Convert</button>
         </fieldset>
       </form>
-      <div id="output" class="output hidden"></div>
+      <div id="output"></div>
     </main>
     <script src="roman-converter.js"></script>
   </body>
