--- a/Roman-Converter/roman-converter.html
+++ b/Roman-Converter/roman-converter.html
@@ -2,37 +2,23 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-    <link
-      href="https://fonts.googleapis.com/css2?family=Castoro+Titling&display=swap"
-      rel="stylesheet"
-    />
-    <link rel="stylesheet" type="text/css" href="roman-converter.css" />
-    <link
-      rel="icon"
-      type="image/png"
-      href="https://cdn.freecodecamp.org/universal/favicons/favicon.ico"
-    />
     <title>Roman Numeral Converter</title>
+    <link rel="stylesheet" href="styles.css" />
   </head>
+  <main>
   <body>
-    <main>
-      <img
-        class="freecodecamp-logo"
-        src="https://cdn.freecodecamp.org/platform/universal/fcc_primary.svg"
-        alt="freeCodeCamp Logo"
-      />
-      <h1>Roman Numeral Converter</h1>
-      <form id="form" class="form">
-        <fieldset>
-          <label for="number">Enter a Number:</label><br />
-          <input type="number" id="number" required />
-          <button type="button" id="convert-btn">Convert</button>
-        </fieldset>
-      </form>
-      <div id="output"></div>
-    </main>
-    <script src="roman-converter.js"></script>
+    <form id="form" class="form">
+      <fieldset>
+        <h1>Roman Numeral Converter</h1>
+        <label>Enter a Number:</label>
+        <input id="number"></input>
+        <button id="convert-btn">Convert</button>
+     <fieldset>
+    </form>
+    <div id="output" class="output"></div>
+    <script src="script.js"></script>
   </body>
+  </main>
 </html>
