--- a/Roman-Converter/roman-converter.html
+++ b/Roman-Converter/roman-converter.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Roman Numeral Converter</title>
-    <link rel="stylesheet" href="styles.css" />
+    <link rel="stylesheet" href="roman-converter.css" />
   </head>
   <main>
     <body>
@@ -15,7 +15,7 @@
         <button id="convert-btn">Convert</button>
        </fieldset> 
     <div id="output" ></div>
-    <script src="script.js"></script>
+    <script src="roman-converter.js"></script>
     </body>
   </main>
 </html>
